--- a/sociales2.html
+++ b/sociales2.html
@@ -193,6 +193,16 @@
 
 </div>
 
+<div class="contenido">
+
+<div  class="imagensociales"></div>
+<div class="textosociales"></div>
+¿Quién es el biologo marino más importante?
+<Br>
+El 11 de junio de 1910 nació Jacques Cousteau, quien se convirtió en el oceanógrafo más famoso del mundo. Con sus libros, películas y series, Cousteau difundió el valor de la vida en los mares del mundo y contribuyó a tomar conciencia de la importancia de su conservació
+</Br>
+</div>
+
 </body>
 
 </html>
