--- a/relijion2.html
+++ b/relijion2.html
@@ -18,13 +18,13 @@
 
 </head>
 
-<body class="fondobiologia2">
+<body class="fondoreligion2">
 
 <div class="contenedor">
 
 <div class="encabezado">
 
-BIOLOGIA
+RELIGION
 
 </div>
 
@@ -203,6 +203,14 @@ BIOLOGIA
 </ul>
 
 </div>
+
+
+
+
+
+
+
+
 
 
 
