--- a/matematicas2.html
+++ b/matematicas2.html
@@ -194,8 +194,16 @@ MATEMATICAS
         
         </li>
 
-<li> <a href="">Acerca de</a>
+        <li> <a href="">Acerca de</a>
 
+
+ <div  class="contenido">
+<div  class="imagenmate"></div>
+<div  class="textomate">
+Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit nihil vel, aliquid dignissimos nemo eos molestiae porro dolor dicta voluptatibus maxime! Alias sed numquam dolorum. Rem incidunt dignissimos illo autem!
+
+</div>
+ </div>           
  
 
 </li>
