--- a/relijion2.html
+++ b/relijion2.html
@@ -213,16 +213,268 @@ RELIGION
 <br>
 </p>
 <p>
-<h1>¿ QUE INVESTIGA EL HINDUISMO ?</h1>El hinduismo es una religion que proviene de la india, y se basa fundamentalmente en 4 aspectos aspectos o verdades, que explicaremos o verdaderos, que explicare mas adelante: la existencia del dios Brahman, el karma, la reencarnacion y la liberacion.
+<h2>¿ QUE INVESTIGA EL HINDUISMO ?</h2>El hinduismo es una religion que proviene de la india, y se basa fundamentalmente en 4 aspectos aspectos o verdades, que explicaremos o verdaderos, que explicare mas adelante: la existencia del dios Brahman, el karma, la reencarnacion y la liberacion.
 <br>
 </p>
 <p>
-<h1>¿ QUE BUSCA EL HINDUISMO ?</h1>La libertad es indispensable porque la autoridad no es creadora. La libertad posibilita plenamente el desarrollo de la personalidad y crea las condiciones necesarias para su crecimiento. Ninguna uniformidad, ninguna conformidad o comprencion de todos los aspectos se la vida podria ser sufisiente.
+<h2>¿ QUE BUSCA EL HINDUISMO ?</h2>La libertad es indispensable porque la autoridad no es creadora. La libertad posibilita plenamente el desarrollo de la personalidad y crea las condiciones necesarias para su crecimiento. Ninguna uniformidad, ninguna conformidad o comprencion de todos los aspectos se la vida podria ser sufisiente.
 <br>
 </p>
 <p>
+<h2>FUNDADOR DEL HINDUISMO</h2>El hinduismo no tiene un fundador especifico, ya que se trata de un conjunto de manifestaciones religiosas en vez de una religion unitaria.
+<br>
+</p>
+<p>
+<h2>¿ DEIDAD MAYOR DEL HINDUISMO ?</h2> Los principales dioses hindues son: brahama, el dios de la creacion vishnu,el dios de la conservacion y shiva, el dios de la destruccion.
+<br> 
+</p>
+<p>
+<h2>¿QUE TIPO DE DIOS TIENE EL HINDUISMO</h2>Politeista
+<br>
+</p>
+<p>
+<h2>NOMBRE Y NUMERO DE SEGUIDORES DEL HINDUISMO</h2>Numero: 1140 millones.
+Nombre: Hinduistas
+<br>
+</p>
+<p>
+<h2>TEXTO SAGRADO DEL HINDUISMO</h2>Los vedos, el ramaiana, el bhagavad-guita, el majabharata, los puranas.
+<br>
+</p>
+<p>
+<h2>LENGUA LITURGICA DEL HINDUISMO</h2>Sancrito.
+<br>
+</p>
+<p>
+<h2>DONDE NACE EL HINDUISMO</h2>India nepal.
+<br>
+</p>
+<p>
+<h2>¿la tierra o lugar del hinduismo?</h2>El hinduismo es mayoritario actualmente solo entres paises del mundo, india (cuna del induismo), donse don 75%, nepal donde son el 85% y la isla africana de Mauricio.
+<br>
+</p>
+<p>
+<h2>¿ PORQUE EL HINDUISMO ES POLITEISTA ?</h2>Esta religion politeista tiene miles de dioses, pero todos se consideran diferentes rostros de un unico dios al que llaman bha.
+<br>
+</p>
+<p>
+<h2>¿ PAIS CON MAYOR CANTIDAD DE INDUISTAS ?</h2>>En la india, los induistas son el 8,5% del total de la poblacion.
+<br>
+</p>
+<p>
+<h2>CARACTERISTICAS DEL INDUISMO</h2>No tiene un jerarca religioso. El hinduismo no tiene una figura de autoridad principal, ni tiene una iglesia en el sentido jerarquico del termino.
+<br> 
+</p>
+<p>
+-Es diverso y plurarl.
+<br>
+</p>
+<p>
+-Tiene un rico panteon de deidades.
+<br>
+</p>
+<p>
+-No es una religion proselitista.
+<br>
+</p>
+<p>
+<h2>COMO NACIO EL HINDUISMO</h2>Nacio hace mas de 400 años como resultado de la union de practicas espirituales y rituales en el subcontinente indio.
+<br>
+</p>
+<p>
+<h2>PAICES DONDE SE PRCTICA EL HINDUISMO</h2>
+<br>
+</p>
+<p>
+-India.
+<br>
+</p>
+<p>
+-Nepal.
+<br>
+</p>
+<p>
+-Banglades.
+<br>
+</p>
+<p>
+-Malasia.
+<br>
+</p>
+<p>
+<h2>¿ QUE SIGNIFICA LA PALABRA SAMSARA ?</h2>La palabra viene de "sam si"(fluir con). El samsara es la corriente perpetua y cilica que arrastra el "atman", el alma individual, a travez de las rencarnaciones sucesivas. Esta simbolizado en una rueda siempre en movimiento, o tambien en la sucecion de las aleadas de un rio incesante.
+<br>  
+</p>
+<p>
+<h2>QUIEN CREO EL HINDUISMO</h2>El hinduismo no tiene creador, se formulo por los pensamientos profundos de los richis hace mas de 5000 añoa.
+<br>
+</p>
+<p>
+<h2>CUALES SON LAS CREENCIAS ESENCIALES DEL HINDUISMO</h2> "Todo es dios y dios es todo", "todos los caminos conducen a la salvacion" "realizar a dios"
+<br>
+</p>
+<p>
+<h2>CUANTOS DIOSES HAY EN EL HINDUISMO</h2>322 millones de dioses.
+<br>
+</p>
+<p>
+<h2>QUE ES EL KARMA</h2>Ley de causa y efecto. Toda accion tiene una reaccion, es por eso que el hinduismo cree en la reencarnacion. Cada accion trae consigo una reaccion, la que siembra cosecha incluso pensamientos que puedes tener traen consigo una reaccion o una causa. Es una ley universal que aplica a todos y en todo momento.
+<br>
+</p>
+<p>
+<h2>MENSIONA QUE DIOSES FORMAN PARTE DE LA TRINIDAD HINDU</h2>Brahmis, kshetriyas, vasyas y sudras.Des estas 4 se deriban las 6400 castas.
+<br>
+</p>
+<p>
+<h2>MENSIONA QUE DIOSES FORMAN PARTE DE LA TRINIDAD HINDU</h2>Brama, vishnu y siva.
+<br>
+</p>
+<p>
+<h2>¿ PORQUE SE CONSIDERA EL RIO GANGO (O GANES EN ESPAÑOL) COMO UN RIO SAGRADO ?</h2>Segun la metologia hindu, gango una diosa que bajo del cielo para purificar las cenizas de los familiares de un gran rey. Si alguien se baña en el gango, recibe purificacion de sus pecados. Si tomas el agua del ganges su interior es purificado.
+<br>
+</p>
+<p>
+<h2>PAIS CON MAYOR CANTIDAD DE HINDUES</h2>India es el pais con mas emigrantes repartidos por el mundo, 17.869.492 segun los ultimos datos.
+<br>
+</p>
+<p>
+<h2>RAMAS DEL HINDUISMO</h2>El vaishnavismo o la adoracion del dios Vishnú, y el saivismo.
+<br>
+</p>
+<p>
+<h1><h2>¿ COMO ESTA FORMADO EL CLERO DEL HINDUISMO ?</h2>El hinduismo incluye una diversidad de ideas sobre la espiritualidad y las tradiciones, pero no tienen una orden esclesiatica, ni autiridad religiosa, ni tipo alguno de gobierno, ni profetas y tampoco esta sujeto a un libro sagrsdo.
+<br>
+</p>
+<p>
+<h2>RELIGIONES RELIGIONES RELACIONADAS CON EL HINDUISMO</h2>
+</p>
+<P>
+-Budismo.
+<br>
+</P>
+<p>
+-Jainismo.
+<br>
+</p>
+<p>
+-Sijismo.
+<br>
+</p>
+<p>
+<h2>¿ PORQUE SE LA LLAMA AL HINDUISMO RELIGION VEDICA ?</h2>Originalmente, proviene del idioma persa "hindú", el nombre del rio sindhu (llamado rio indio en), que la frontera entre persia y el indostán.
+<br> 
+</p>
+<p>
+<h2>SEGUN EL DOC QUE ES EL HINDUISMO</h2>Es una religion que proviene de la india y se basa fundamentalmente en 4 aspectos o verdades, que explicare mas adelante: la existencia del dion brahman, el karma, la reencarnacion y la liberacion.
+<br>
+</p>
+<p>
+<h2>QUE ES EL SANATANA EDN EL HINDISMUO</h2>Sanatana dharma es un endominio utilizado por los hindues para referirse al hinduismo.
+<br>
+</p>
+<p>
+<h2>¿ QUE TRADUCE SEGUN EL DOC LA PALABRA HINDUISMO ?</h2>Religion politeista predominante en la india, procedente del vedismo y brahmansismo antiguos, que afirman la existencia de la reencarnacion y prescribe un sistema social de castas.
+<br>
+</p>
+<p>
+<h2>¿ QUE ES EL BRAHMAN EN EL HINDUISMO ?</h2>En el hinduismo, brahman connota el principio universal supremo, la realidad superior en el universo, lo absoluto dentro de la cosmologia hinduista. En las escuelas principales de filosofia hindú, es la causa material, eficiente, y final de todo auqello que existe.
+<br>
+</p>
+<p>
+<h2>¿ como se llaman los hindues al cielo ?</h2>"cielo" del marco hinduista. En el marco del himduismo, swarga o (suarga) es un grupo de mundos celestiales situados en el monte meru y por encima de el. Es el cielo adonde lo justos viven en un paraiso antes de su siguiente reencarnacion.
+<br> 
+</p>
+<p>
+<h2>¿ DONDE SE DESARROLLA POR PRIMERA VEZ EL HONDUISMO ?</h2>india.
+<br>
+</p>
+<p>
+<h2>¿ QUE CREEN LOS INDUES SOBRE LA VERDAD ?</h2>La verdad es eterna.
+<br>
+</p>
+<p>
+<h2>¿ QUE ES LA REENCARNACION ?</h2>Reenacimiento del alma.
+<br>
+</p>
+<p>
+<h2>EN EL HINDUISMO ¿ CUAL ES EL PROPOSITO DE LA reencarnacion ?</h2>Otra oportunidad para lograr moksha.
+<br>
+</p>
+<p>
+<h2>¿ QUE ES moksha ?</h2>Fin del ciclo de la reencarnacion.
+<br>
+</p>
+<P>
+<h2>¿ COMO LOGRAN LOS INDUES EL MOKSHA ?</h2>Una vida correcta (vivir vien).
+<br>
+</P>
+<p>
+<h2>¿ QUE ES EL DHARMA ?</h2>El camino que debe seguir para encontrar la verdad.
+<br>
+</p>
+<p>
+<h2>¿ QUE SON LAS VEDAS ?</h2>Escrituras sagradas hindúes.
+<br> 
+</p>
+<p>
+<h2>COMO AFECTA EL kARMA LA VIDA DE LOS HINDÚES</h2>El buen karma puede darte un dharma facil la proxima vez.
+<br>
+</p>
+<p>
+<h2>¿ CUAL ES EL SISTEMA DE CLASES SOCIALES QUE PREVALECE EN LA INDIA ?</h2>Sistemas de castas.
+<br>
+</p>
+<p>
+<h2>¿ CUAL ES EL RIO MAS SAGRADO PARA LOS HINDÚES ?</h2>Rio ganges.
+<br>
+</p>
+<p>
+<h2>PAISES DONDE SE PRACTICA EL INDUISMO</h2>
+<br>
+</p>
+<p>
+-India.
+<br>
+</p>
+<p>
+-Nepal
+<br>
+</p>
+<p>
+-Banglades.
+<br>
+</p>
+<p>
+-Malasia.
+<br>
+</p>
+<p>
+<h2>MENCIONA QUE DIOSES FORMAN PARTE DE LA TRINIDAD HINDÚ</h2>
+<br>
+</p>
+<p>
+-Brahma.
+<br>
+</p>
+<p>
+-Vishnu.
+<br>
+</p>
+<p>
+-Siva.
+<br>
+</p>
+<p>
+<h2>CUANTAS CASTAS HAY EN LA INDIA</h2>6400.
+<br>
+</p>
+<p>
+<h2>¿ COMO SE LLAMA LA BIBLIA DE LOS HINDUES ?</h2>bhagavad-guita.
+<br>
+</p>
 
-</p>
+
+
 
 
 </div>
