--- a/tecnologia2.html
+++ b/tecnologia2.html
@@ -208,7 +208,9 @@
     <div class="contenido">
     <div class=".imagentecnologia2"></div>
     <div class=".textotecnologia2"></div>
-
+    <center>
+        <div  class="imagenbasica"></div>
+        </center>
     <p>
     <h1>OPERADORES ELÉCTRICOS.</h1>
     <br>
@@ -326,6 +328,8 @@
     Toma de tierra: Toda instalación eléctrica debe contar con toma de tierra. Se trata de una conexión al suelo, para desechar corrientes eléctricas indeseables. Se trata de un electrodo, por lo general denominado "pica" enterrado en el suelo y unido a un conductor conectado a la instalación eléctrica.Una de sus principales funciones en instalaciones de baja tensión es proteger a las personas contra electrocución.
     <br> 
     </p>
+    <br><br>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/iYZfxkZda70" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <p>
     <h1>ELECTRÓNICA BÁSICA.</h1>
     <br>
